// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tasks page — state matrix > Loading: rail + detail both render skeletons while the list fetch is pending > detail 1`] = `
<aside
  aria-busy="true"
  aria-label="Loading task"
  aria-live="polite"
  class="tasks-pane__detail detail-skeleton"
  data-testid="task-detail-skeleton"
  role="status"
>
  <div
    aria-hidden="true"
    class="detail-skeleton__inner"
  >
    <span
      class="skeleton detail-skeleton__title"
    />
    <div
      class="detail-skeleton__meta-row"
    >
      <span
        class="skeleton detail-skeleton__chip"
      />
      <span
        class="skeleton detail-skeleton__chip detail-skeleton__chip--wide"
      />
    </div>
    <div
      class="detail-skeleton__body"
    >
      <span
        class="skeleton detail-skeleton__line detail-skeleton__line--long"
      />
      <span
        class="skeleton detail-skeleton__line detail-skeleton__line--med"
      />
      <span
        class="skeleton detail-skeleton__line detail-skeleton__line--short"
      />
      <span
        class="skeleton detail-skeleton__line detail-skeleton__line--med"
      />
    </div>
  </div>
</aside>
`;

exports[`Tasks page — state matrix > Loading: rail + detail both render skeletons while the list fetch is pending > rail 1`] = `
<div
  aria-busy="true"
  aria-label="Loading tasks"
  aria-live="polite"
  class="list-skeleton"
  data-testid="tasks-list-skeleton"
  role="status"
>
  <ul
    aria-hidden="true"
    class="task-list list-skeleton__list"
  >
    <li
      class="task-list__item list-skeleton__row"
    >
      <span
        class="skeleton list-skeleton__headline"
      />
      <span
        class="skeleton list-skeleton__meta"
      />
      <span
        class="skeleton list-skeleton__id"
      />
    </li>
    <li
      class="task-list__item list-skeleton__row"
    >
      <span
        class="skeleton list-skeleton__headline"
      />
      <span
        class="skeleton list-skeleton__meta"
      />
      <span
        class="skeleton list-skeleton__id"
      />
    </li>
    <li
      class="task-list__item list-skeleton__row"
    >
      <span
        class="skeleton list-skeleton__headline"
      />
      <span
        class="skeleton list-skeleton__meta"
      />
      <span
        class="skeleton list-skeleton__id"
      />
    </li>
    <li
      class="task-list__item list-skeleton__row"
    >
      <span
        class="skeleton list-skeleton__headline"
      />
      <span
        class="skeleton list-skeleton__meta"
      />
      <span
        class="skeleton list-skeleton__id"
      />
    </li>
  </ul>
</div>
`;

exports[`Tasks page — state matrix > No-match: a filter hiding every row renders the 🔍 EmptyState + Clear filters CTA 1`] = `
<div
  class="empty"
  data-testid="tasks-empty-nomatch"
  role="status"
>
  <div
    aria-hidden="true"
    class="empty__icon"
  >
    🔍
  </div>
  <p
    class="empty__title"
  >
    No matches
  </p>
  <p
    class="empty__hint"
  >
    Adjust the filters above to see more tasks, or clear them all.
  </p>
  <button
    class="btn empty__cta"
    data-testid="tasks-empty-nomatch-cta"
    type="button"
  >
    <span>
      Clear filters
    </span>
  </button>
</div>
`;

exports[`Tasks page — state matrix > Zero: empty workspace renders the 📝 EmptyState (Dispatch CTA) only in the detail pane 1`] = `
<div
  class="empty"
  data-testid="tasks-empty-zero"
  role="status"
>
  <div
    aria-hidden="true"
    class="empty__icon"
  >
    📝
  </div>
  <p
    class="empty__title"
  >
    No tasks yet
  </p>
  <p
    class="empty__hint"
  >
    Dispatch a task to run an agent autonomously and read the result here when it finishes.
  </p>
  <button
    class="btn btn--primary empty__cta"
    data-testid="tasks-empty-zero-cta"
    title="Dispatch a new task"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 4.5v15m7.5-7.5h-15"
      />
    </svg>
    <span>
      Dispatch task
    </span>
  </button>
</div>
`;
